--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     },
     "dependencies": {
         "@pythia-oracle/pythia-core": "1.0.0-rc.8",
+        "axios": "^0.27.2",
+        "axios-cache-adapter": "^2.7.3",
+        "axios-retry": "^3.2.5",
         "defender-kvstore-client": "^1.18.0",
         "defender-relay-client": "^1.20.0",
         "dotenv": "^16.0.0",
