Add hardhat dependencies and config for testing

--- a/package.json
+++ b/package.json
@@ -25,12 +25,16 @@
         "yargs": "^17.5.1"
     },
     "devDependencies": {
+        "@nomiclabs/hardhat-ethers": "^2.0.6",
+        "@nomiclabs/hardhat-waffle": "^2.0.3",
         "@rollup/plugin-commonjs": "^21.1.0",
         "@rollup/plugin-json": "^4.1.0",
         "@rollup/plugin-node-resolve": "^13.2.1",
         "@rollup/plugin-typescript": "^8.3.2",
         "@typechain/ethers-v5": "^10.0.0",
         "builtin-modules": "^3.2.0",
+        "chai": "^4.3.6",
+        "ethereum-waffle": "^3.4.4",
         "hardhat": "^2.9.9",
         "prettier": "^2.6.2",
         "rollup": "^2.70.2",
