--- a/package.json
+++ b/package.json
@@ -32,12 +32,16 @@
         "@rollup/plugin-node-resolve": "^13.2.1",
         "@rollup/plugin-typescript": "^8.3.2",
         "@typechain/ethers-v5": "^10.0.0",
+        "@types/chai": "^4.3.1",
+        "@types/mocha": "^9.1.1",
+        "@types/node": "^18.0.0",
         "builtin-modules": "^3.2.0",
         "chai": "^4.3.6",
         "ethereum-waffle": "^3.4.4",
         "hardhat": "^2.9.9",
         "prettier": "^2.6.2",
         "rollup": "^2.70.2",
+        "ts-node": "^10.8.2",
         "tslib": "^2.3.1",
         "typechain": "^8.0.0",
         "typescript": "^4.6.3"
