--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,14 @@
     "compilerOptions": {
         "outDir": "./dist",
         "noImplicitAny": false,
-        "target": "es2017",
+        "target": "es2018",
         "allowJs": true,
-        "module": "es6",
+        "module": "commonjs",
         "moduleResolution": "node",
         "resolveJsonModule": true,
         "esModuleInterop": true
     },
     "include": ["./**/*"],
-    "exclude": ["dist/**/*"]
+    "exclude": ["dist/**/*"],
+    "files": ["./hardhat.config.ts", "./adrastia.config.ts"]
 }
