--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "@pythia-oracle/pythia-core": "1.0.0-rc.8",
+        "await-timeout": "^1.1.1",
         "axios": "^0.27.2",
         "axios-cache-adapter": "^2.7.3",
         "axios-retry": "^3.2.5",
