--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "chai": "^4.3.6",
         "ethereum-waffle": "^3.4.4",
         "hardhat": "^2.9.9",
+        "log-timestamp": "^0.3.0",
         "prettier": "^2.6.2",
         "rollup": "^2.70.2",
         "ts-node": "^10.8.2",
