--- a/package.json
+++ b/package.json
@@ -8,44 +8,44 @@
         "clean-stores": "rm -f store.json.tmp",
         "clean-dist": "rm -rf dist",
         "clean": "yarn clean-stores && yarn clean-dist && yarn clean-typechain",
-        "build": "rollup -c -i src/tasks/oracle-updater.ts -o dist/tasks/oracle-updater.js -f cjs",
+        "build": "rollup -c -i src/tasks/oracle-updater.ts -o dist/tasks/oracle-updater.js -f cjs --bundleConfigAsCjs",
         "run": "node dist/tasks/oracle-updater.js",
         "bar": "yarn build && yarn run run",
-        "typechain:generate": "yarn typechain --target=ethers-v5 ./node_modules/@pythia-oracle/pythia-core/artifacts/**/*.json --out-dir=./typechain && yarn typechain --target=ethers-v5 ./node_modules/@openzeppelin-v4/contracts/build/contracts/**/*.json --out-dir=./typechain "
+        "typechain:generate": "yarn typechain --target=ethers-v5 ./node_modules/@adrastia-oracle/adrastia-core/artifacts/**/*.json --out-dir=./typechain && yarn typechain --target=ethers-v5 ./node_modules/@openzeppelin-v4/contracts/build/contracts/**/*.json --out-dir=./typechain "
     },
     "dependencies": {
-        "@pythia-oracle/pythia-core": "1.0.0-rc.8",
+        "@adrastia-oracle/adrastia-core": "1.0.0",
         "await-timeout": "^1.1.1",
-        "axios": "^0.27.2",
+        "axios": "^1.2.0",
         "axios-cache-adapter": "^2.7.3",
-        "axios-retry": "^3.2.5",
-        "defender-kvstore-client": "^1.18.0",
-        "defender-relay-client": "^1.20.0",
-        "dotenv": "^16.0.0",
-        "ethers": "^5.6.4",
-        "yargs": "^17.5.1"
+        "axios-retry": "^3.3.1",
+        "defender-kvstore-client": "^1.37.0",
+        "defender-relay-client": "^1.37.0",
+        "dotenv": "^16.0.3",
+        "ethers": "^5.7.2",
+        "yargs": "17.6.2"
     },
     "devDependencies": {
-        "@nomiclabs/hardhat-ethers": "^2.0.6",
+        "@nomiclabs/hardhat-ethers": "2.2.1",
         "@nomiclabs/hardhat-waffle": "^2.0.3",
-        "@rollup/plugin-commonjs": "^21.1.0",
-        "@rollup/plugin-json": "^4.1.0",
-        "@rollup/plugin-node-resolve": "^13.2.1",
-        "@rollup/plugin-typescript": "^8.3.2",
-        "@typechain/ethers-v5": "^10.0.0",
-        "@types/chai": "^4.3.1",
-        "@types/mocha": "^9.1.1",
-        "@types/node": "^18.0.0",
-        "builtin-modules": "^3.2.0",
-        "chai": "^4.3.6",
+        "@rollup/plugin-commonjs": "^23.0.3",
+        "@rollup/plugin-json": "^5.0.2",
+        "@rollup/plugin-node-resolve": "^15.0.1",
+        "@rollup/plugin-typescript": "^10.0.1",
+        "@typechain/ethers-v5": "^10.1.1",
+        "@types/chai": "^4.3.4",
+        "@types/mocha": "^10.0.1",
+        "@types/node": "^18.11.10",
+        "builtin-modules": "^3.3.0",
+        "chai": "^4.3.7",
         "ethereum-waffle": "^3.4.4",
-        "hardhat": "^2.9.9",
+        "hardhat": "^2.12.3",
         "log-timestamp": "^0.3.0",
-        "prettier": "^2.6.2",
-        "rollup": "^2.70.2",
-        "ts-node": "^10.8.2",
-        "tslib": "^2.3.1",
-        "typechain": "^8.0.0",
-        "typescript": "^4.6.3"
+        "prettier": "^2.8.0",
+        "rollup": "^3.5.0",
+        "ts-node": "^10.9.1",
+        "tslib": "^2.4.1",
+        "typechain": "^8.1.1",
+        "typescript": "^4.9.3"
     }
 }
