Add Redis support

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,14 @@ PROXY_PORT=
 PROXY_USERNAME=
 PROXY_PASSWORD=
 
+# Redis configuration
+REDIS_ENABLED=
+REDIS_HOST=
+REDIS_PORT=
+REDIS_USERNAME=
+REDIS_PASSWORD=
+REDIS_DATABASE=
+
 # OpenZeppelin Defender configuration for Polygon
 POLYGON_API_KEY=
 POLYGON_API_SECRET=
