Add network configs for Polygon ZkEVM, Moonbeam, and Boba Ethereum

--- a/.env.example
+++ b/.env.example
@@ -71,3 +71,18 @@ BSC_PASSPHRASE=""
 EVMOS_URL=
 EVMOS_MNEMONIC=""
 EVMOS_PASSPHRASE=""
+
+# Hardhat configuration for PolygonZkEVM
+POLYGONZKEVM_URL=
+POLYGONZKEVM_MNEMONIC=""
+POLYGONZKEVM_PASSPHRASE=""
+
+# Hardhat configuration for Moonbeam
+MOONBEAM_URL=
+MOONBEAM_MNEMONIC=""
+MOONBEAM_PASSPHRASE=""
+
+# Hardhat configuration for Boba Ethereum
+BOBAETHEREUM_URL=
+BOBAETHEREUM_MNEMONIC=""
+BOBAETHEREUM_PASSPHRASE=""
