Fix incorrect comment

--- a/.env.example
+++ b/.env.example
@@ -32,7 +32,7 @@ BSC_API_SECRET=
 OPTIMISM_API_KEY=
 OPTIMISM_API_SECRET=
 
-# OpenZeppelin Defender configuration for Ethereum
+# Hardhat configuration for Ethereum
 ETHEREUM_URL=
 ETHEREUM_MNEMONIC=""
 ETHEREUM_PASSPHRASE=""
