Add env var support for network account count

--- a/.env.example
+++ b/.env.example
@@ -34,69 +34,81 @@ OPTIMISM_API_SECRET=
 
 # Default hardhat configuration
 DEFAULT_GASMULTIPLIER=1.25
+DEFAULT_ACCOUNT_COUNT=50
 
 # Hardhat configuration for Ethereum
 ETHEREUM_URL=
 ETHEREUM_MNEMONIC=""
 ETHEREUM_PASSPHRASE=""
 ETHEREUM_GASMULTIPLIER=1.25
+ETHEREUM_ACCOUNT_COUNT=100
 
 # Hardhat configuration for Polygon
 POLYGON_URL=
 POLYGON_MNEMONIC=""
 POLYGON_PASSPHRASE=""
 POLYGON_GASMULTIPLIER=1.25
+POLYGON_ACCOUNT_COUNT=
 
 # Hardhat configuration for Optimism
 OPTIMISM_URL=
 OPTIMISM_MNEMONIC=""
 OPTIMISM_PASSPHRASE=""
 OPTIMISM_GASMULTIPLIER=1.25
+OPTIMISM_ACCOUNT_COUNT=
 
 # Hardhat configuration for Arbitrum One
 ARBITRUMONE_URL=
 ARBITRUMONE_MNEMONIC=""
 ARBITRUMONE_PASSPHRASE=""
 ARBITRUMONE_GASMULTIPLIER=1.25
+ARBITRUMONE_ACCOUNT_COUNT=
 
 # Hardhat configuration for Avalanche
 AVALANCHE_URL=
 AVALANCHE_MNEMONIC=""
 AVALANCHE_PASSPHRASE=""
 AVALANCHE_GASMULTIPLIER=1.25
+AVALANCHE_ACCOUNT_COUNT=
 
 # Hardhat configuration for Fantom
 FANTOM_URL=
 FANTOM_MNEMONIC=""
 FANTOM_PASSPHRASE=""
 FANTOM_GASMULTIPLIER=1.25
+FANTOM_ACCOUNT_COUNT=
 
 # Hardhat configuration for BSC
 BSC_URL=
 BSC_MNEMONIC=""
 BSC_PASSPHRASE=""
 BSC_GASMULTIPLIER=1.25
+BSC_ACCOUNT_COUNT=
 
 # Hardhat configuration for EVMOS
 EVMOS_URL=
 EVMOS_MNEMONIC=""
 EVMOS_PASSPHRASE=""
 EVMOS_GASMULTIPLIER=1.25
+EVMOS_ACCOUNT_COUNT=
 
 # Hardhat configuration for PolygonZkEVM
 POLYGONZKEVM_URL=
 POLYGONZKEVM_MNEMONIC=""
 POLYGONZKEVM_PASSPHRASE=""
 POLYGONZKEVM_GASMULTIPLIER=1.25
+POLYGONZKEVM_ACCOUNT_COUNT=
 
 # Hardhat configuration for Moonbeam
 MOONBEAM_URL=
 MOONBEAM_MNEMONIC=""
 MOONBEAM_PASSPHRASE=""
 MOONBEAM_GASMULTIPLIER=1.25
+MOONBEAM_ACCOUNT_COUNT=
 
 # Hardhat configuration for Boba Ethereum
 BOBAETHEREUM_URL=
 BOBAETHEREUM_MNEMONIC=""
 BOBAETHEREUM_PASSPHRASE=""
 BOBAETHEREUM_GASMULTIPLIER=1.25
+BOBAETHEREUM_ACCOUNT_COUNT=
