Add ZkSyncEra config to .env.example

--- a/.env.example
+++ b/.env.example
@@ -112,3 +112,10 @@ BOBAETHEREUM_MNEMONIC=""
 BOBAETHEREUM_PASSPHRASE=""
 BOBAETHEREUM_GASMULTIPLIER=1.25
 BOBAETHEREUM_ACCOUNT_COUNT=
+
+# Hardhat configuration for ZkSync Era
+ZKSYNCERA_URL=
+ZKSYNCERA_MNEMONIC=""
+ZKSYNCERA_PASSPHRASE=""
+ZKSYNCERA_GASMULTIPLIER=1.25
+ZKSYNCERA_ACCOUNT_COUNT=
