Add support for Filecoin and Rootstock

--- a/.env.example
+++ b/.env.example
@@ -119,3 +119,18 @@ ZKSYNCERA_MNEMONIC=""
 ZKSYNCERA_PASSPHRASE=""
 ZKSYNCERA_GASMULTIPLIER=1.25
 ZKSYNCERA_ACCOUNT_COUNT=
+
+# Hardhat configuration for Filecoin
+FILECOIN_URL=
+FILECOIN_MNEMONIC=""
+FILECOIN_PASSPHRASE=""
+FILECOIN_GASMULTIPLIER=1.25
+FILECOIN_ACCOUNT_COUNT=
+
+# Hardhat configuration for Rootstock
+ROOTSTOCK_URL=
+ROOTSTOCK_MNEMONIC=""
+ROOTSTOCK_PASSPHRASE=""
+ROOTSTOCK_GASMULTIPLIER=1.25
+ROOTSTOCK_ACCOUNT_COUNT=
+
