--- a/package.json
+++ b/package.json
@@ -11,45 +11,50 @@
         "build": "rollup -c -i src/tasks/oracle-updater.ts -o dist/tasks/oracle-updater.js -f cjs --bundleConfigAsCjs",
         "run": "node dist/tasks/oracle-updater.js",
         "bar": "yarn build && yarn run run",
-        "typechain:generate": "yarn typechain --target=ethers-v5 ./node_modules/@adrastia-oracle/adrastia-core/artifacts/**/*.json --out-dir=./typechain/adrastia-core && yarn typechain --target=ethers-v5 ./node_modules/adrastia-core-v4/artifacts/**/*.json --out-dir=./typechain/adrastia-core-v4 && yarn typechain --target=ethers-v5 ./node_modules/@openzeppelin-v4/contracts/build/contracts/**/*.json --out-dir=./typechain/openzeppelin-v4 && yarn typechain --target=ethers-v5 ./node_modules/@adrastia-oracle/adrastia-periphery/artifacts/**/*.json --out-dir=./typechain/adrastia-periphery && yarn typechain --target=ethers-v5 ./artifacts/contracts/AutomationCompatibleInterface.sol/AutomationCompatibleInterface.json --out-dir=./typechain/local "
+        "typechain:generate": "yarn typechain --target=ethers-v6 ./node_modules/@adrastia-oracle/adrastia-core/artifacts/**/*.json --out-dir=./typechain/adrastia-core && yarn typechain --target=ethers-v6 ./node_modules/adrastia-core-v4/artifacts/**/*.json --out-dir=./typechain/adrastia-core-v4 && yarn typechain --target=ethers-v6 ./node_modules/@openzeppelin-v4/contracts/build/contracts/**/*.json --out-dir=./typechain/openzeppelin-v4 && yarn typechain --target=ethers-v6 ./node_modules/@adrastia-oracle/adrastia-periphery/artifacts/**/*.json --out-dir=./typechain/adrastia-periphery && yarn typechain --target=ethers-v6 ./artifacts/contracts/AutomationCompatibleInterface.sol/AutomationCompatibleInterface.json --out-dir=./typechain/local "
     },
     "dependencies": {
         "@adrastia-oracle/adrastia-core": "3.0.0",
         "@adrastia-oracle/adrastia-periphery": "^3.0.0",
+        "@nomicfoundation/hardhat-chai-matchers": "^2.0.2",
+        "@nomicfoundation/hardhat-ethers": "^3.0.5",
+        "@nomicfoundation/hardhat-toolbox": "^4.0.0",
+        "@nomicfoundation/hardhat-verify": "^2.0.1",
+        "@typechain/ethers-v6": "^0.5.1",
+        "@typechain/hardhat": "^9.1.0",
         "adrastia-core-v4": "npm:@adrastia-oracle/adrastia-core@v4.0.0-beta.4",
         "await-timeout": "^1.1.1",
         "axios": "^0.27.2",
         "axios-cache-adapter": "^2.7.3",
         "axios-retry": "^3.3.1",
-        "defender-kvstore-client": "^1.37.0",
-        "defender-relay-client": "^1.37.0",
-        "dotenv": "^16.0.3",
-        "ethers": "^5.7.2",
-        "redis": "^4.5.1",
+        "defender-kvstore-client": "^1.44.0",
+        "defender-relay-client": "^1.44.0",
+        "dotenv": "^16.3.1",
+        "ethers": "^6.8.1",
+        "redis": "^4.6.11",
         "sd-notify": "^2.8.0",
-        "yargs": "17.6.2"
+        "yargs": "17.7.2"
     },
     "devDependencies": {
-        "@nomiclabs/hardhat-ethers": "2.2.1",
-        "@nomiclabs/hardhat-waffle": "^2.0.3",
-        "@rollup/plugin-commonjs": "^23.0.3",
-        "@rollup/plugin-json": "^5.0.2",
-        "@rollup/plugin-node-resolve": "^15.0.1",
-        "@rollup/plugin-typescript": "^10.0.1",
-        "@typechain/ethers-v5": "^10.1.1",
-        "@types/chai": "^4.3.4",
-        "@types/mocha": "^10.0.1",
-        "@types/node": "^18.11.10",
+        "@nomicfoundation/hardhat-network-helpers": "^1.0.9",
+        "@rollup/plugin-commonjs": "^25.0.7",
+        "@rollup/plugin-json": "^6.0.1",
+        "@rollup/plugin-node-resolve": "^15.2.3",
+        "@rollup/plugin-typescript": "^11.1.5",
+        "@types/chai": "^4.3.11",
+        "@types/mocha": "^10.0.6",
+        "@types/node": "^20.10.0",
         "builtin-modules": "^3.3.0",
-        "chai": "^4.3.7",
-        "ethereum-waffle": "^3.4.4",
-        "hardhat": "^2.12.3",
+        "chai": "^4.3.10",
+        "hardhat": "^2.19.1",
+        "hardhat-gas-reporter": "^1.0.9",
         "log-timestamp": "^0.3.0",
-        "prettier": "^2.8.0",
-        "rollup": "^3.5.0",
+        "prettier": "^3.1.0",
+        "rollup": "^4.5.2",
+        "solidity-coverage": "^0.8.5",
         "ts-node": "^10.9.1",
-        "tslib": "^2.4.1",
-        "typechain": "^8.1.1",
-        "typescript": "^4.9.3"
+        "tslib": "^2.6.2",
+        "typechain": "^8.3.2",
+        "typescript": "^5.3.2"
     }
 }
