--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "version": "0.0.1",
     "main": "index.js",
     "license": "MIT",
+    "engines" : {
+        "node" : ">=18.0.0"
+    },
     "scripts": {
         "clean-typechain": "rm -rf typechain",
         "clean-stores": "rm -f store.json.tmp",
