Add network support for Base, Gnosis, and Metis

--- a/.env.example
+++ b/.env.example
@@ -134,3 +134,24 @@ ROOTSTOCK_PASSPHRASE=""
 ROOTSTOCK_GASMULTIPLIER=1.25
 ROOTSTOCK_ACCOUNT_COUNT=
 
+# Hardhat configuration for Base
+BASE_URL=
+BASE_MNEMONIC=""
+BASE_PASSPHRASE=""
+BASE_GASMULTIPLIER=1.25
+BASE_ACCOUNT_COUNT=
+
+# Hardhat configuration for Metis
+METIS_URL=
+METIS_MNEMONIC=""
+METIS_PASSPHRASE=""
+METIS_GASMULTIPLIER=1.25
+METIS_ACCOUNT_COUNT=
+
+# Hardhat configuration for Gnosis
+GNOSIS_URL=
+GNOSIS_MNEMONIC=""
+GNOSIS_PASSPHRASE=""
+GNOSIS_GASMULTIPLIER=1.25
+GNOSIS_ACCOUNT_COUNT=
+
