Add network config for Scroll

--- a/.env.example
+++ b/.env.example
@@ -134,3 +134,10 @@ GNOSIS_MNEMONIC=""
 GNOSIS_PASSPHRASE=""
 GNOSIS_GASMULTIPLIER=1.25
 GNOSIS_ACCOUNT_COUNT=
+
+# Hardhat configuration for Scroll
+SCROLL_URL=
+SCROLL_MNEMONIC=""
+SCROLL_PASSPHRASE=""
+SCROLL_GASMULTIPLIER=1.25
+SCROLL_ACCOUNT_COUNT=
