Add support for Manta Pacific

--- a/.env.example
+++ b/.env.example
@@ -122,3 +122,9 @@ SCROLL_URL=
 SCROLL_MNEMONIC=""
 SCROLL_PASSPHRASE=""
 SCROLL_ACCOUNT_COUNT=
+
+# Hardhat configuration for Manta Pacific
+MANTAPACIFIC_URL=
+MANTAPACIFIC_MNEMONIC=""
+MANTAPACIFIC_PASSPHRASE=""
+MANTAPACIFIC_ACCOUNT_COUNT=
