--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dependencies": {
         "@adrastia-oracle/adrastia-core": "3.0.0",
         "@adrastia-oracle/adrastia-periphery": "^3.0.0",
+        "@logtail/node": "^0.4.19",
+        "@logtail/winston": "^0.4.19",
         "@nomicfoundation/hardhat-chai-matchers": "^2.0.2",
         "@nomicfoundation/hardhat-ethers": "^3.0.5",
         "@nomicfoundation/hardhat-toolbox": "^4.0.0",
