Add support for Blast

--- a/.env.example
+++ b/.env.example
@@ -128,3 +128,9 @@ MANTAPACIFIC_URL=
 MANTAPACIFIC_MNEMONIC=""
 MANTAPACIFIC_PASSPHRASE=""
 MANTAPACIFIC_ACCOUNT_COUNT=
+
+# Hardhat configuration for Blast
+BLAST_URL=
+BLAST_MNEMONIC=""
+BLAST_PASSPHRASE=""
+BLAST_ACCOUNT_COUNT=
