--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "@nomicfoundation/hardhat-ignition": "^0.15.0",
         "@nomicfoundation/hardhat-ignition-ethers": "^0.15.0",
         "@nomicfoundation/hardhat-network-helpers": "^1.0.10",
+        "@nomicfoundation/hardhat-web3-v4": "^1.0.0",
         "@nomicfoundation/ignition-core": "^0.15.0",
         "@types/mocha": ">=9.1.0",
         "@types/node": "^20.11.28",
@@ -51,6 +52,7 @@
         "ts-node": "^10.9.2",
         "tslib": "^2.6.2",
         "typechain": "^8.3.2",
-        "typescript": "^5.4.2"
+        "typescript": "^5.4.2",
+        "web3": "^4.6.0"
     }
 }
